Develop (#10)
* feat: Implement student accommodation management application with login and signup functionality

- Created main application component and HTML structure.
- Developed login component with reactive form validation and submission handling.
- Designed signup component with multi-step form for user registration.
- Added student registration component with detailed form for personal, academic, and accommodation information.
- Introduced global styles and responsive design elements.
- Integrated Bootstrap for UI components and styling.
- Set up routing for navigation between components.
- Established TypeScript configuration for the Angular application.

* Refactor README.md to provide detailed information about the student accommodation system

* feat: Initialize project structure and add configuration files for student accommodation application

* feat: create home page

* ERD

* feat: implement authentication service with login and signup function… (#1)

* feat: implement authentication service with login and signup functionality

* feat: enhance JWT utility and configuration for improved security management

* feat: update signup response to return 201 status code for successful registration

* feat: add JWT expiration time configuration and update related classes

* Update backend/src/main/java/com/beezhub/student_accommodation/security/jwt/JwtUtil.java

---------

Co-authored-by: B-Tshehla

* Feature/httpserver (#2)

* feature/http

* feat: add authentication service and update login/signup components

* feat: enhance login functionality with error handling and password validation

* feat: implement profile setup and document upload components with routing

* feat: added student front end components

---------

Co-authored-by: Ayanda-H <boshiwehadebe@gmail.com>
Co-authored-by: botshehla <boitumelo.tshehla@multiply.co.za>

* Updated ReadMe file (#3)

Co-authored-by: botshehla <boitumelo.tshehla@multiply.co.za>

* feat: add institution, student, and ye